--- a/package.json
+++ b/package.json
@@ -9,12 +9,45 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^35.2.1",
+    "@ckeditor/ckeditor5-react": "^5.0.2",
+    "@editorjs/editorjs": "^2.25.0",
+    "@next-auth/mongodb-adapter": "^1.1.1",
+    "@tiptap/react": "^2.0.0-beta.115",
+    "@tiptap/starter-kit": "^2.0.0-beta.192",
+    "chart.js": "^3.9.1",
+    "crypto-js": "^4.1.1",
+    "draft-js": "^0.11.7",
+    "formik": "^2.2.9",
+    "html-react-parser": "^3.0.4",
+    "jodit-react": "^1.3.20",
+    "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^3.1.2",
+    "mongoose": "^6.5.4",
     "next": "12.2.5",
+    "next-auth": "^4.12.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-chartjs-2": "^4.3.1",
+    "react-dom": "18.2.0",
+    "react-file-base64": "^1.0.3",
+    "react-icon": "^1.0.0",
+    "react-icons": "^4.4.0",
+    "react-moment": "^1.1.2",
+    "react-quill": "^2.0.0",
+    "react-redux": "^8.0.2",
+    "react-serialize": "^0.2.1",
+    "react-toastify": "^9.0.8",
+    "recharts": "^2.1.14",
+    "redux": "^4.2.0",
+    "redux-thunk": "^2.4.1",
+    "valtio": "^1.7.4",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.12",
     "eslint": "8.23.0",
-    "eslint-config-next": "12.2.5"
+    "eslint-config-next": "12.2.5",
+    "postcss": "^8.4.17",
+    "tailwindcss": "^3.1.8"
   }
 }
