--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "12.2.5",
     "next-auth": "^4.12.3",
     "react": "18.2.0",
+    "react-chartjs-2": "^4.3.1",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
     "react-moment": "^1.1.2",
