--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "next-auth": "^4.12.3",
     "react": "18.2.0",
     "react-chartjs-2": "^4.3.1",
+    "react-device-detect": "^2.2.2",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
     "react-moment": "^1.1.2",
     "react-quill": "^2.0.0",
+    "react-responsive": "^9.0.0",
     "react-toastify": "^9.0.8",
     "yup": "^0.32.11"
   },
