--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-quill": "^2.0.0",
     "react-responsive": "^9.0.0",
     "react-toastify": "^9.0.8",
+    "url-join": "^5.0.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
